--- a/page2.html
+++ b/page2.html
@@ -40,7 +40,7 @@
         <h2>FLAG OF KOREA</h2>
         <hr>
         <div class="flag">
-          <img src="koreaFlag.jpg" hight="700" width="700"/>
+          <img src="KoreaFlag.jpg" hight="700" width="700"/>
         </div>
         <br> 
         <hr>
