--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <title>OH, MY KOREA!</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel='stylesheet' type="text/css" href='index.css'/>
+        <link rel='stylesheet' type="text/css" href='style.css'/>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -18,9 +18,9 @@
             </button>
           
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html">MAIN <span class="sr-only">(current)</span></a>
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="index.html">MAIN</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="page0.html">ABOUT KOREA</a>
@@ -36,10 +36,8 @@
       <hr>
       <h1>대한민국</h1>
       <hr>
-      <br/>
-      <br/>
-      <br/>
-      <br/>
+      
+      <div style="height: 100px;"></div>
 
       <div class="other-language">
         韓国 Korea कोरिया Coréia కొరియా Kauslim
@@ -49,6 +47,8 @@
         ਕੋਰੀਆ 朝鲜 ಕೊರಿಯಾ ကိုရီးယား ប្រទេសកូរ៉េ
          ڪوريا Coreea Карэя Кореа კორეა Kóreu
       </div>        
+
+      <div style="height: 200px;"></div>
 
       <div>
       <footer>
