--- a/page0.html
+++ b/page0.html
@@ -76,7 +76,7 @@
           <footer>
             Sarah Lee: https://github.com/ldssarah/gitpractice.git
             <br>
-            Injung Kim: https://github.com/InjoongK/Creative-Project-1.git
+            Injoong Kim: https://github.com/InjoongK/Creative-Project-1.git
           </footer>   
           </div>
         
