--- a/page2.html
+++ b/page2.html
@@ -56,7 +56,7 @@
           <footer>
             Sarah Lee: https://github.com/ldssarah/gitpractice.git
             <br>
-            Injung Kim: https://github.com/InjoongK/Creative-Project-1.git
+            Injoong Kim: https://github.com/InjoongK/Creative-Project-1.git
           </footer>   
           </div>
 
